infrastructure/gitea/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gitea
  namespace: gitea
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`gitea.homelab.local`)
      kind: Rule
      services:
        - name: gitea-http
          port: 3000
  tls:
    secretName: gitea-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gitea-http-redirect
  namespace: gitea
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`gitea.homelab.local`)
      kind: Rule
      middlewares:
        - name: redirect-to-https
          namespace: traefik
      services:
        - name: gitea-http
          port: 3000
